# pyodide-jsdelivr-index

./: .gitignore  pyproject.toml  wrangler.jsonc
.github/workflows/: main.yml
src/: create_index.py  worker.py
test/: _pyodide_entrypoint_helper.py  conftest.py  js.py  test_worker.py
