[project]
name = "pyodide-jsdelivr-index"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "workers-runtime-sdk>=0.3.1",
]

[dependency-groups]
dev = [
    "workers-py>=1.7.0",
    "pyodide_py==0.28.3",
    {include-group = "test"}
]
test = [
    "beautifulsoup4>=4.14.2",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.35.0",
]
